--- a/Chalkable.Web/assets/sass/partials/_sidebar.scss
+++ b/Chalkable.Web/assets/sass/partials/_sidebar.scss
@@ -71,6 +71,7 @@ BODY {
 
               background: transparent;
               border: none;
+              box-shadow: none;
             }
 
             IMG {
