--- a/Chalkable.Web/assets/sass/partials/main/announcement/_view.scss
+++ b/Chalkable.Web/assets/sass/partials/main/announcement/_view.scss
@@ -558,33 +558,8 @@ $red-color: #842727;
           }
 
           .alert-flag{
-            position: absolute;
-            width: 12px;
-            height: 18px;
             top: -24px;
             right: 6px;
-            background-position: center center;
-            background-repeat: no-repeat;
-
-            &.incomplete{
-              background-image: url(images/grading/incomplete-flag.png);
-            }
-
-            &.late{
-              background-image: url(images/grading/orange-flag.png);
-            }
-
-            &.absent{
-              background-image: url(images/grading/blue-flag.png);
-            }
-
-            &.multiple{
-              background-image: url(images/grading/alerts.png);
-            }
-
-            &.error{
-              background-image: url(images/grading/red-flag.png);
-            }
           }
 
           .selected{
@@ -741,5 +716,33 @@ DIV.triangle {
       padding-right: 12px;
       background: url(images/grading/enter.png) right center no-repeat;
     }
+  }
+}
+
+.alert-flag{
+  position: absolute;
+  width: 12px;
+  height: 18px;
+  background-position: center center;
+  background-repeat: no-repeat;
+
+  &.incomplete{
+    background-image: url(images/grading/incomplete-flag.png);
+  }
+
+  &.late{
+    background-image: url(images/grading/orange-flag.png);
+  }
+
+  &.absent{
+    background-image: url(images/grading/blue-flag.png);
+  }
+
+  &.multiple{
+    background-image: url(images/grading/alerts.png);
+  }
+
+  &.error{
+    background-image: url(images/grading/red-flag.png);
   }
 }
