--- a/Chalkable.Web/assets/sass/screen.scss
+++ b/Chalkable.Web/assets/sass/screen.scss
@@ -253,7 +253,7 @@ overflow-hidden{
 
   .tooltip-triangle {
     height: 7px;
-    background: url(images/feed/triangle.png) center 0 no-repeat;
+    background: url(images/feed/triangle.png) center bottom no-repeat;
   }
 
   .p7{
