--- a/Chalkable.Web/assets/sass/partials/main/people/_list.scss
+++ b/Chalkable.Web/assets/sass/partials/main/people/_list.scss
@@ -8,6 +8,7 @@
   .people-search{
     background: transparent;
     border: none;
+    @include box-shadow(none);
     width: 410px;
     height: 28px !important;
     text-align: right;
