--- a/Chalkable.Web/assets/sass/screen.scss
+++ b/Chalkable.Web/assets/sass/screen.scss
@@ -249,6 +249,7 @@ overflow-hidden{
     font-size: 13px;
     padding: 3px 5px;
     line-height: 15px;
+    max-width: 150px;
   }
 
   .tooltip-triangle {
