--- a/Chalkable.Web/assets/jade/controls/scroll-box.jade
+++ b/Chalkable.Web/assets/jade/controls/scroll-box.jade
@@ -1,5 +1,9 @@
-mixin ScrollBox(formId)
+mixin ScrollBox(formId, mustScrollId, pageSizeId, actualCountId, startId)
     -attributes.formId = formId
+    -attributes.mustScrollField = mustScrollId
+    -attributes.pageSizeId = pageSizeId
+    -attributes.actualCountField = actualCountId
+    -attributes.startField = startId
     -self.processAttrs(attributes)
     .chlk-scrollbox.with-scroller(attributes)
         block
