fixed developer app reviews

--- a/Chalkable.Web/assets/sass/partials/main/developer/_app_general.scss
+++ b/Chalkable.Web/assets/sass/partials/main/developer/_app_general.scss
@@ -159,6 +159,11 @@ BODY {
                 }
 
                 .reviews{
+                  .chlk-scrollbox{
+                    position: relative;
+                  }
+                  display: block;
+                  width: auto !important;
                   .review-link{
                     display: inline-block;
                   }
