--- a/Chalkable.Web/assets/jade/activities/apps/app-general-info.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-general-info.jade
@@ -1,4 +1,4 @@
-mixin Ticks(devBalance)
+mixin Ticks_(devBalance)
     .ticks
         daysInMonth = devBalance.getDaysInMonth()
         numbers = [1, 5, 10, 15, 20, 25, daysInMonth]
@@ -6,7 +6,7 @@ mixin Ticks(devBalance)
                 span(class ="month-type-#{daysInMonth} tick tick#{i}") #{i}
 
 
-mixin CurrentBalance(devBalance)
+mixin CurrentBalance_(devBalance)
     chartOptions = self.prepareBalanceChartOptions(devBalance)
 
     .block.budget-block.relative
@@ -16,14 +16,14 @@ mixin CurrentBalance(devBalance)
                 .inside
                     .big $#{devBalance.getBalance()}
                     .small #{devBalance.getDaysToPayout()} days to payout
-                    +Ticks(devBalance)
+                    +Ticks_(devBalance)
                 .outside
                 +Chart()(data-options = chartOptions)
 
 
 
 
-mixin AppInstallsChart(data, header, chartId)
+mixin AppInstallsChart_(data, header, chartId)
     configs = self.prepareAppInstallsChartData(data)
     appInstallChartOptions = self.prepareAppInstallsChartOptions(configs)
     chartTitle = (data.getStats() ? data.getTotalCount() || "0" : "0")
@@ -37,7 +37,7 @@ mixin AppInstallsChart(data, header, chartId)
                 data-options = appInstallChartOptions
             )
 
-mixin AppViewsChart(data, header, chartId)
+mixin AppViewsChart_(data, header, chartId)
     configs = self.prepareAppViewsChartData(data)
     appViewsChartOptions = self.prepareAppViewsChartOptions(configs)
     .block(attributes)
@@ -50,29 +50,7 @@ mixin AppViewsChart(data, header, chartId)
                 data-options = appViewsChartOptions
             )
 
-
-mixin AppReviews()
-    .app-reviews.reviews
-        appRating = self.getAppRating()
-        .review-link Reviews
-        +Rating("appRating", appRating.getAverage(), false).all
-        .user-reviews
-            .rating-roles.x-hidden
-                each item in appRating.getRoleRatings()
-                    .rating-role-item
-                        role = item.getRole()
-                    .rolename=role.getName()
-                    .app-rating
-                        +Rating( 'role-' + role.getName(), item.getRating())
-                        .personcount=item.getPersonCount()
-            .rating-persons
-                each item in appRating.getPersonRatings()
-                    .rating-person-item
-                        person = item.getPerson()
-                    p=item.getReview() + ' - ' + person.getFullName()
-                        +Rating('person-rating-' + person.getId().valueOf(), item.getRating())
-
-mixin AppStatus(appState, appDraftId, liveAppId)
+mixin AppStatus_(appState, appDraftId, liveAppId)
     stateId = appState.getStateId()
     isApproved = stateId == chlk.models.apps.AppStateEnum.APPROVED
     isSubmitted = stateId == chlk.models.apps.AppStateEnum.SUBMIT_FOR_APPROVE
@@ -110,18 +88,30 @@ mixin AppStatus(appState, appDraftId, liveAppId)
             img(src=self.appThumbnail, width=80, height=80)
         .app-description
             .title=self.appName
-            +AppStatus(self.appState, self.draftAppId, self.liveAppId)
+            +AppStatus_(self.appState, self.draftAppId, self.liveAppId)
 
     .app-installs
-        +AppInstallsChart(self.getAppAnalytics().getAppInstallStats(), "App Installs", 'appInstalls').app-installs
+        +AppInstallsChart_(self.getAppAnalytics().getAppInstallStats(), "App Installs", 'appInstalls').app-installs
 
     .app-store-balance
          .app-store-views
-              +AppViewsChart(self.getAppAnalytics().getAppViewStats(), "App Store Views", "appViews").app-views
+              +AppViewsChart_(self.getAppAnalytics().getAppViewStats(), "App Store Views", "appViews").app-views
          .app-store-current-balance
-              +CurrentBalance(self.getAppAnalytics().getDevBalance())
+              +CurrentBalance_(self.getAppAnalytics().getDevBalance())
 
 
-    +AppReviews()
-
+    .app-reviews.reviews
+       .review-link Reviews
+           devAppReviews = self.getAppReviews()
+           +Rating("appRating", self.getAppRating(), false).all
+        +ActionForm('apps', 'getAppReviews')#appReviews
+            +Hidden('start',devAppReviews.getPageIndex()) * devAppReviews.getPageSize())
+            +Hidden('totalCount', devAppReviews.getTotalCount())
+            +Hidden('pageSize', devAppReviews.getPageSize())
+            +Hidden('appId', self.liveAppId)
+            +Hidden('scroll', 0)
+       +ScrollBox('appReviews', 50)
+           .user-reviews
+               .rating-persons
+                   +RenderWith(self.getModel(), chlk.templates.developer.AppReviewsTpl)
 
