--- a/Chalkable.Web/assets/jade/controls/scroll-box.jade
+++ b/Chalkable.Web/assets/jade/controls/scroll-box.jade
@@ -1,9 +1,11 @@
-mixin ScrollBox(formId, mustScrollId, pageSizeId, actualCountId, startId)
+mixin ScrollBox(formId, offset, mustScrollId, pageSizeId, actualCountId, totalCountId, startId)
     -attributes.formId = formId
+    -attributes.scrollOffset = offset
     -attributes.mustScrollField = mustScrollId
     -attributes.pageSizeId = pageSizeId
     -attributes.actualCountField = actualCountId
     -attributes.startField = startId
+    -attributes.totalCountId = totalCountId
     -self.processAttrs(attributes)
     .chlk-scrollbox.with-scroller(attributes)
         block
