--- a/Chalkable.Web/assets/sass/partials/_mixins.scss
+++ b/Chalkable.Web/assets/sass/partials/_mixins.scss
@@ -53,3 +53,9 @@
   #{$property}: -webkit-calc(#{$expression}); 
   #{$property}: calc(#{$expression}); 
 }
+
+@mixin transparent-item() {
+  background: transparent;
+  border: none !important;
+  @include box-shadow(none);
+}
