--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -2,6 +2,7 @@
 @import "compass/css3/images";
 @import "compass/css3/transform";
 
+@import "partials/_mixins";
 @import "partials/main/_attendance";
 @import "partials/main/_buttons";
 @import "partials/main/_checkboxes";
@@ -61,8 +62,6 @@
 @import "partials/main/notification/_list-new";
 @import "partials/main/notification/_notifications_by_days";
 
-
-
 INPUT, TEXTAREA, .text-field{
   @include border-radius(5px);
   background: #fff;
@@ -87,6 +86,10 @@ INPUT, TEXTAREA, .text-field{
 
   &.padding-1-3{
     padding: 1px 3px;
+  }
+
+  &.transparent{
+    @include transparent-item();
   }
 }
 
