added ruby example

--- a/Chalkable.Web/assets/jade/activities/developer/api-explorer.jade
+++ b/Chalkable.Web/assets/jade/activities/developer/api-explorer.jade
@@ -58,7 +58,7 @@ mixin ApiCallForm(controllerInfo, role)
                                             span.triangle
                                             |python
                                     .tab-content(formId = apiFormId, id="tab-" + apiFormId)
-                                        pre.prettyprint.lang-basic
+                                        pre.prettyprint.lang-python
 
 
 
