--- a/Chalkable.Web/assets/sass/partials/main/developer/_app_general.scss
+++ b/Chalkable.Web/assets/sass/partials/main/developer/_app_general.scss
@@ -158,7 +158,7 @@ BODY {
                   }
                 }
 
-                .reviews{
+                .reviews.developer{
                   .chlk-scrollbox{
                     position: relative;
                   }
