--- a/Chalkable.Web/assets/jade/activities/class/TopBar.jade
+++ b/Chalkable.Web/assets/jade/activities/class/TopBar.jade
@@ -10,6 +10,7 @@ else
         index=self.getIndex(),
         class=self.isPressed() ? "pressed " : "",
         type=self.isDisabled() ? "button" : "submit",
+        data-default-announcement-type-id = self.getDefaultAnnouncementTypeId(),
         name="submitType",
         value="save"
     ).item.class-button.validate-skip
