--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementAppAttachments.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementAppAttachments.jade
@@ -33,11 +33,13 @@ if self.needButtons
     #attach-file-area.announcement-item.attach-file-area
         if !isAnnouncement
             +ActionLink('announcement', 'attachApp', self.getId())#add-application.simple-gray-button Attach App
-        div.simple-gray-button.file Attach File
-            +FileUpload('announcement', 'uploadAttachment', [self.getId().valueOf()])#add-attachment.simple-gray-button
+        if self.getState()
+            div.simple-gray-button.file Attach File
+                +FileUpload('announcement', 'uploadAttachment', [self.getId().valueOf()])#add-attachment.simple-gray-button
 each item, i in items
     if item.getType() == chlk.models.announcement.ApplicationOrAttachmentEnum.APPLICATION
         +AnnouncementFormApplicationItem(item, i)
     else
+        -console.info(self.getUserRole().isTeacher(), item.isOwner(), self.getUserRole().isStudent(), !item.isOwner())
         if self.getUserRole().isTeacher() && item.isOwner() || self.getUserRole().isStudent() && !item.isOwner()
             +AnnouncementFormAttachmentItem(item, i)
