--- a/Chalkable.Web/Views/Shared/_IndexLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_IndexLayout.cshtml
@@ -50,7 +50,7 @@
 			<div id="appStore" class="feature feature1">
 				<div class="wrap">
 					<figure>
-						<img src="@Url.StaticContent("/Content/images/img1.png")" alt="App store image">
+						<img src="@Url.StaticContent("/Content/images/illustration-1.png")" alt="App store image">
 					</figure>
 					<div class="description">
 						<h1>App store</h1>
@@ -62,7 +62,7 @@
 			<div class="feature feature2">
 				<div class="wrap">
 					<figure>
-						<img src="@Url.StaticContent("/Content/images/img2.png")" alt="Platform image">
+						<img src="@Url.StaticContent("/Content/images/illustration-2.png")" alt="Platform image">
 					</figure>
 					<div class="description">
 						<h1>Platform</h1>
@@ -74,7 +74,7 @@
 			<div id="developers" class="feature feature1">
 				<div class="wrap">
 					<figure>
-						<img src="@Url.StaticContent("/Content/images/img3.png")" alt="Developers image">
+						<img src="@Url.StaticContent("/Content/images/illustration-3.png")" alt="Developers image">
 					</figure>
 					<div class="description">
 						<h1>Developers</h1>
