--- a/Chalkable.Web/assets/sass/partials/main/funds/_base_funds.scss
+++ b/Chalkable.Web/assets/sass/partials/main/funds/_base_funds.scss
@@ -75,6 +75,7 @@ BODY {
                         background: none;
                         font-size: 16px;
                         font-weight: bold;
+                        box-shadow: none;
                       }
 
                       .close-icon{
